# remote-development-mcp

./: Cargo.toml  README.md  build-ui.sh  example-settings.yaml  plain0644
remote-development-mcp-ui/: Cargo.toml  Dioxus.toml  build.rs
remote-development-mcp-ui/css/: 01-common.css  02-layout.css  03-panels.css  04-tables.css  05-dialog.css  06-sidebar.css  06-topbar.css  07-files.css  08-syntax.css  99-desktop.css
remote-development-mcp-ui/public/assets/: app.css
remote-development-mcp-ui/src/: main.rs  time.rs
remote-development-mcp-ui/src/api/: dashboard.rs  files.rs  jobs.rs  mod.rs
remote-development-mcp-ui/src/components/: actions_panel.rs  header.rs  history_panel.rs  jobs_panel.rs  mod.rs  render_duration.rs  repos_panel.rs  sessions_panel.rs  sidebar.rs  top_bar.rs
remote-development-mcp-ui/src/dialogs/: dialog_state.rs  mod.rs  render.rs
remote-development-mcp-ui/src/dialogs/job_output/: mod.rs  render.rs  state.rs
remote-development-mcp-ui/src/models/: mod.rs  request_error.rs
remote-development-mcp-ui/src/states/: app_state.rs  mod.rs  section.rs  theme.rs
remote-development-mcp-ui/src/views/: mod.rs
remote-development-mcp-ui/src/views/dashboard/: render.rs
remote-development-mcp-ui/src/views/files/: actions.rs  mod.rs  render.rs  state.rs  tree.rs
remote-development-mcp-ui/src/web/: storage.rs
rest-api-shared/: Cargo.toml
rest-api-shared/src/: dashboard.rs  files.rs  job_output.rs  lib.rs
src/: main.rs  settings.rs
src/actions/: mod.rs  poller.rs  watched_run.rs  watched_runs.rs
src/activity/: activity_event.rs  activity_log.rs  mod.rs  panic_hook.rs
src/app/: app_ctx.rs
src/audit/: audit_log.rs
src/github/: github_client.rs  mod.rs  release_tag.rs  release_workflows.rs  repo_slug.rs  version.rs  workflow_run.rs
src/http/: auth_middleware.rs  build_controllers.rs  errors.rs  index_rewrite_middleware.rs  mod.rs  raw_files_middleware.rs  start_up.rs
src/http/controllers/: mod.rs
src/http/controllers/dashboard/: get_state_action.rs  mod.rs
src/http/controllers/files/: get_content_action.rs  get_raw_action.rs  list_folder_action.rs  mod.rs
src/http/controllers/jobs/: get_output_action.rs  mod.rs
src/jobs/: job.rs  job_log.rs  jobs_registry.rs  jobs_registry_inner.rs  mod.rs
src/mcp/: apply_patch_tool_call.rs  clean_cargo_targets_tool_call.rs  create_release_tool_call.rs  delete_path_tool_call.rs  edit_file_tool_call.rs  get_job_output_tool_call.rs  git_tool_call.rs  kill_job_tool_call.rs  list_dir_tool_call.rs  list_jobs_tool_call.rs  logged_tool.rs  mod.rs  move_path_tool_call.rs  read_file_tool_call.rs  register_tools.rs  repo_info_tool_call.rs  run_command_tool_call.rs  search_tool_call.rs  watch_actions_tool_call.rs  write_file_tool_call.rs
src/repo/: command_policy.rs  endpoint.rs  mod.rs  path_confinement.rs  repo_context.rs  test_support.rs
src/scripts/: apply_patch.rs  browse_file.rs  clean_cargo_targets.rs  create_release.rs  dashboard_state.rs  delete_path.rs  edit_file.rs  exec_capture.rs  git_command.rs  highlight.rs  job_control.rs  kill_process_group.rs  list_dir.rs  mod.rs  move_path.rs  read_file.rs  render_markdown.rs  repo_info.rs  run_command.rs  search.rs  watch_actions.rs  working_dir.rs  write_file.rs
src/sessions/: mod.rs  session_info.rs  session_observer.rs  sessions_registry.rs
src/tui/: console.rs  mod.rs  render.rs  running_job.rs
wwwroot/: index.html
wwwroot/assets/: app.css  remote-development-mcp-ui-dxh10b77e7ec726a09a.js  remote-development-mcp-ui-dxh12559c7efe4bce1f.js  remote-development-mcp-ui-dxh33d6522917d3331.js  remote-development-mcp-ui-dxh3da96cd427757fac.js  remote-development-mcp-ui-dxh435262fdf875686e.js  remote-development-mcp-ui-dxh4fc25b92489af67b.js  remote-development-mcp-ui-dxh67646e73155c5de0.js  remote-development-mcp-ui-dxh77a7e02a70e0e281.js  remote-development-mcp-ui-dxh7c4c64b4d1d5b5b0.js  remote-development-mcp-ui-dxh8981a34eb4c77e5c.js  remote-development-mcp-ui-dxhab463792a9aa31.js  remote-development-mcp-ui-dxhafe2942da7221d47.js  remote-development-mcp-ui-dxhc123e374e3229f3.js  remote-development-mcp-ui-dxhc336eb522eb8222d.js  remote-development-mcp-ui-dxhdd3f1d872139171.js  remote-development-mcp-ui-dxhe6893bfb76ecc1.js  remote-development-mcp-ui-dxhef748c969b7e83ec.js  remote-development-mcp-ui-dxhf14ae0ada14dd888.js  remote-development-mcp-ui-dxhf798d4e1d82aa7a5.js  remote-development-mcp-ui_bg-dxh144475cc884f83b3.wasm  remote-development-mcp-ui_bg-dxh17def56babff4935.wasm  remote-development-mcp-ui_bg-dxh1e1b5541164beddb.wasm  remote-development-mcp-ui_bg-dxh1e97cf1a95ce4e8f.wasm  remote-development-mcp-ui_bg-dxh3532e25aa981359c.wasm  remote-development-mcp-ui_bg-dxh50d3fbf6de3f2ffd.wasm  remote-development-mcp-ui_bg-dxh51c5b2dd0fe6ae9.wasm  remote-development-mcp-ui_bg-dxh5ba1f0b914cb15c5.wasm  remote-development-mcp-ui_bg-dxh61c62f26d4f6ac1.wasm  remote-development-mcp-ui_bg-dxh6381d456efff234.wasm  remote-development-mcp-ui_bg-dxh6b345944a5fbcbd.wasm  remote-development-mcp-ui_bg-dxh6fb1603cc209c2c.wasm  remote-development-mcp-ui_bg-dxh7759b952675e897.wasm  remote-development-mcp-ui_bg-dxh84764741a26d39b.wasm  remote-development-mcp-ui_bg-dxh9af859badda2c191.wasm  remote-development-mcp-ui_bg-dxhb7fe79976a6893fb.wasm  remote-development-mcp-ui_bg-dxhc3c9a0749efad9ee.wasm  remote-development-mcp-ui_bg-dxhe543389278543331.wasm  remote-development-mcp-ui_bg-dxhf157a953c4fc3cfd.wasm
