[package]
name = "remote-development-mcp"
version = "0.1.0"
edition = "2021"

# The UI is a wasm crate with its own lock file and its own toolchain (`dx`), so
# it is deliberately not a member of this workspace.
[workspace]
exclude = ["remote-development-mcp-ui"]

[dependencies]
mcp-server-middleware = { tag = "0.9.0", git = "https://github.com/my-ai-utils/mcp-server-middleware.git" }

my-http-server = { tag = "0.9.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "controllers",
    "macros",
    "static-files",
] }

# Wire models shared verbatim with remote-development-mcp-ui, so the JSON the
# server writes and the JSON the browser parses can not drift apart.
rest-api-shared = { path = "./rest-api-shared", features = ["server"] }

my-ai-agent = { tag = "0.1.0", git = "https://github.com/my-ai-utils/my-ai-agent.git", features = [
    "agent",
] }

my-settings-reader = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-settings-reader.git" }

my-logger = { tag = "1.3.0", git = "https://github.com/MyJetTools/my-logger.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

# Only for turning the iso2 country code a proxy reports into the iso3 the flag
# assets are named by. `default-features = false` on purpose: the default
# `time-zones` feature drags in chrono and chrono-tz, and nothing here tells the
# time.
rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", default-features = false, features = [
    "country-code",
] }

tokio = { version = "*", features = ["full"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

async-trait = "*"

# Needed to signal a whole process group: killing a `cargo` job has to take its
# `rustc` children with it, which `Child::kill` alone does not do.
libc = "*"

parking_lot = "*"
ahash = "*"

# Search is implemented in-process rather than by shelling out to `rg`, so the
# machine needs no ripgrep installed. These are ripgrep's own libraries: `ignore`
# is its directory walker (gitignore semantics included) and `regex` its engine,
# so the behaviour stays the one people expect from rg.
ignore = "*"
regex = "*"

# GitHub REST API. Same pin my-settings-reader carries, so there is one copy of
# flurl in the graph.
flurl = { tag = "0.7.0", git = "https://github.com/MyJetTools/fl-url.git" }

# Renders markdown for the browser console. `default-features = false` on
# purpose: the default set drags in `getopts`, which exists for the crate's own
# command-line binary and is dead weight here.
pulldown-cmark = { version = "*", default-features = false, features = ["html"] }

# Syntax highlighting for the file viewer, done here rather than in the browser:
# the console is wasm, and a highlighter there would cost every reader a download
# to save this machine nothing.
#
# `default-fancy` instead of the default feature set: the default one matches
# with `onig`, which is a C library to build, and `fancy-regex` is pure Rust for
# the same grammars.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
