[package]
name = "remote-development-mcp-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7" }
dioxus-utils = { tag = "0.7.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "web",
] }

# The same models the server writes, used verbatim — the console can not parse a
# shape the server does not produce. Pulled without the "server" feature: the
# browser needs the schema, not the request parsing.
rest-api-shared = { path = "../rest-api-shared" }

# Compiles to the browser fetch API under wasm and resolves the relative
# "/api/..." URLs against the page origin.
flurl = { tag = "0.7.0", git = "https://github.com/MyJetTools/fl-url.git" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.3" }

[profile.release]
strip = "debuginfo"
