[package]
name = "rest-api-shared"
version = "0.1.0"
edition = "2021"

# Wire models shared verbatim by the server and the wasm UI, so the contract can
# not drift between the two. Kept wasm-clean: my-http-utils only, never
# my-http-server.
[dependencies]
my-http-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-http-utils.git" }
serde = { version = "*", features = ["derive"] }

[features]
server = ["my-http-utils/server"]
